ipad/touch fixes- hides popover and removes flicker

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -91,3 +91,7 @@ a {
   }
   color: $font-color-orange;
 }
+// removes flicker on ipad
+*{
+  -webkit-tap-highlight-color:transparent;
+}
